// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SkillItem closes the dialog when the close button is clicked 1`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-efsm9h-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span />
    JavaScript
  </button>
</div>
`;

exports[`SkillItem closes the dialog when the close button is clicked 2`] = `
<div
  aria-hidden="true"
>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-efsm9h-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span />
    JavaScript
  </button>
</div>
`;

exports[`SkillItem closes the dialog when the close button is clicked 3`] = `
<div>
  <button
    class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButton-colorPrimary css-efsm9h-MuiButtonBase-root-MuiButton-root"
    tabindex="0"
    type="button"
  >
    <span />
    JavaScript
  </button>
</div>
`;
